sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value i
  while (i<getNombreValeurs){
         ^AlgGnomeSort:4: error: not found: value i
    if (plusPetit(i+1,i)){
                  ^AlgGnomeSort:4: error: not found: value i
    if (plusPetit(i+1,i)){
                      ^AlgGnomeSort:5: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:5: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:6: error: not found: value i
      i=i-1
      ^AlgGnomeSort:8: error: not found: value i
      i=i+1
      ^