sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  while (i<getNombreValeurs){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
      i=i-1
    }else{
      i=i+1
    }
  }
}